Bug 12038 - Suspend regression in stable kernel 2.6.27.4 on Mac mini Core Duo
Summary: Suspend regression in stable kernel 2.6.27.4 on Mac mini Core Duo
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Sleep-Wake (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Rafael J. Wysocki
URL:
Keywords:
Depends on:
Blocks: 7216 11808
  Show dependency tree
 
Reported: 2008-11-15 14:49 UTC by Rafael J. Wysocki
Modified: 2008-11-30 15:14 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.28-rc3, 2.6.27.4
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2008-11-15 14:49:33 UTC
Subject    : Suspend regression in stable kernel 2.6.27.4 on Mac mini Core Duo
Submitter  : Tino Keitel <tino.keitel@gmx.de>
Date       : 2008-11-09 20:28
References : http://marc.info/?l=linux-kernel&m=122626258429689&w=4
Handled-By : "Rafael J. Wysocki" <rjw@sisk.pl>
Patch      : http://marc.info/?l=linux-kernel&m=122661443120581&w=4

This entry is being used for tracking a regression from 2.6.27.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Rafael J. Wysocki 2008-11-15 14:56:41 UTC
First-Bad-Commit : 66036f5862883fcc9f7ff8550685a5a3de1a57e4
Comment 2 Zhang Rui 2008-11-25 19:39:24 UTC
seems that the patch is already available.
Rafael, would you please update the status of this bug please?
Comment 3 Rafael J. Wysocki 2008-11-26 06:09:48 UTC
I'd prefer not to until the patch is merged.  This makes the tracking of it as a regression a bit easier.

Note You need to log in before you can comment on or make changes to this bug.